--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import './components/about';
 @import './components/button';
+@import './components/composition';
 @import './components/header';
 
 @import './layout/grid';
