--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import './components/about';
 @import './components/button';
 @import './components/composition';
+@import './components/feature-box';
 @import './components/header';
 
 @import './layout/grid';
