added tours-section and card component

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import './components/about';
 @import './components/button';
+@import './components/card';
 @import './components/composition';
 @import './components/feature-box';
 @import './components/header';
