--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -51,6 +51,16 @@
     }
   }
 
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+    border: 1px solid $color-primary;
+  
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
   &--animated {
     animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
