--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,11 +7,13 @@
 @import './base/utilities';
 
 @import './components/about';
+@import './components/bg-video';
 @import './components/button';
 @import './components/card';
 @import './components/composition';
 @import './components/feature-box';
 @import './components/header';
+@import './components/story';
 
 @import './layout/grid';
 
