--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -25,3 +25,9 @@
   padding: 15rem 0;
   position: relative;
 }
+
+.section-book {
+  background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+  padding: 15rem 0;
+  position: relative;
+}
