added navigation component

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import './components/form';
 @import './components/header';
 @import './components/input';
+@import './components/navigation';
 @import './components/radio-button';
 @import './components/story';
 
