added popup component for section-tours

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,13 +1,20 @@
 .btn {
-  text-transform: uppercase;
-  padding: 1.5rem 4rem;
-  display: inline-block;
-  font-family: inherit;
-  font-size: $default-font-size;
-  border-radius: 10rem;
-  transition: all 0.2s;
-  cursor: pointer;
-  position: relative;
+  &,
+  &:link,
+  &:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.5rem 4rem;
+    display: inline-block;
+    border-radius: 10rem;
+    transition: all 0.2s;
+    position: relative;
+    font-size: $default-font-size;
+
+    //Change for the <button> element
+    border: none;
+    cursor: pointer;
+  }
 
   &:hover {
     transform: translateY(-3px);
@@ -21,7 +28,7 @@
 
   &:active {
     transform: translateY(-1px);
-    box-shadow: 0 .5rem 1rem rgba($color-black, 0.2);
+    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
 
   &:focus {
@@ -45,7 +52,7 @@
     background-color: $color-white;
     color: $color-grey-dark;
     border: 1px solid $color-white;
-  
+
     &::after {
       background-color: $color-white;
     }
@@ -55,7 +62,7 @@
     background-color: $color-primary;
     color: $color-white;
     border: 1px solid $color-primary;
-  
+
     &::after {
       background-color: $color-primary;
     }
@@ -68,27 +75,29 @@
 }
 
 .btn-text {
-  font-size: $default-font-size;
-  color: $color-primary;
-  border: 0;
-  border-bottom: 1px solid $color-primary;
-  display: inline-block;
-  padding: 1rem;
-  transition: all .2s;
-  appearance: none;
-  background-color: transparent;
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $color-primary;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $color-primary;
+    padding: 3px;
+    transition: all 0.2s;
+    border: 0;
+  }
 
   &:hover {
     background-color: $color-primary;
     color: $color-white;
     cursor: pointer;
-    box-shadow: 0 1rem 2rem rgba($color-black, .15);
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
     transform: translateY(-2px);
     border-radius: 5px;
   }
 
   &:active {
-    box-shadow: 0 .5rem 1rem rgba($color-black, .15);
+    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
     transform: translateY(0);
   }
 
@@ -96,5 +105,3 @@
     outline: none;
   }
 }
-
-
