--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import './components/header';
 @import './components/input';
 @import './components/navigation';
+@import './components/popup';
 @import './components/radio-button';
 @import './components/story';
 
