--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,19 @@
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; // 1rem = 10px;  10px/16px = 62.5%
+
+  @include respond(tab-land) {
+    font-size: 56.25%; // 1rem = 9px;  9px/16px = 56.25%
+  }
+
+  @include respond(tab-port) {
+    font-size: 50%; // 1rem = 8px;  8px/16px = 50%
+  }
+
+  @include respond(big-desktop) {
+    font-size: 68.75%; // 1rem = 11px;  11px/16px = 68.75%
+  }
 }
 
 
@@ -24,6 +36,10 @@ body {
   color: #777;
   padding: 3rem;
   box-sizing: border-box;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
 
 code {
