--- a/src/sass/components/_radio-button.scss
+++ b/src/sass/components/_radio-button.scss
@@ -3,6 +3,11 @@
   &__radio-group {
     width: 50%;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-input {
