--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 @import './abstracts/variables';
 
 @import './base/animations';
+@import '../index.scss';
 @import './base/base';
 @import './base/typography';
 @import './base/utilities';
