added responsive images, colored selected text and custom scrollbar

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -158,7 +158,9 @@
 
 
   // ==============================
-  @include respond(tab-port) {
+  // @include respond(tab-port) {
+  @media only screen and (max-width: 56.25em),
+         only screen and (hover: none) { // for touch screen like mobile devices and tablets
 
     // Functionality
     height: auto;
