--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,15 +1,28 @@
 .header {
   background-image: linear-gradient(
       to right bottom,
-      rgba(126, 213, 111, 0.8),
-      rgba(40, 180, 131, 0.8)
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
     ),
-    url('/img/hero.jpg');
+    url('/img/hero-small.jpg');
   height: 90vh;
   background-size: cover;
   background-position: top;
   position: relative;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
+  // dpi    = dot per inch
+  // 600px  = 37.5em
+  // 2000px = 125em
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+         only screen and (min-width: 125em) {
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.8),
+        rgba($color-primary-dark, 0.8)
+      ),
+      url('/img/hero.jpg');
+  }
 
   @include respond(phone) {
     clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
