--- a/src/sass/components/_popup.scss
+++ b/src/sass/components/_popup.scss
@@ -2,13 +2,19 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba($color-black, .8);
+  background-color: rgba($color-black, 0.8);
   height: 100vh;
   width: 100%;
   z-index: 3000;
   opacity: 0;
   visibility: hidden;
-  transition: all .3s;
+  transition: all 0.3s;
+
+  @supports (-webkit-backdrop-filter: blur(2px)) or (backdrop-filter: blur(2px)) {
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+    background-color: rgba($color-black, 0.3);
+  }
 
   &__content {
     @include absCenter;
@@ -16,12 +22,12 @@
     width: 75%;
     background-color: $color-white;
     border-radius: 3px;
-    box-shadow: 0 2rem 4rem rgba($color-black, .2);
+    box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
     display: table;
     overflow: hidden;
     opacity: 0;
-    transform: translate(-50%, -50%) scale(.25);
-    transition: all .5s .2s;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.5s 0.2s;
   }
 
   &__left {
@@ -66,7 +72,8 @@
   }
 
   &__close {
-    &:link, &:visited {
+    &:link,
+    &:visited {
       color: $color-grey-dark;
       position: absolute;
       top: 2.5rem;
@@ -74,7 +81,7 @@
       font-size: 3rem;
       text-decoration: none;
       display: inline-block;
-      transition: all .2s;
+      transition: all 0.2s;
       line-height: 1;
     }
 
